--- a/personal.html
+++ b/personal.html
@@ -28,7 +28,7 @@
 		<img src = "imgs/wisconsin_dells.jpg" alt="Kids ziplining" width="25"/>
 		<img src = "imgs/badlands.jpg" alt="Kids at badland" width="1000"/>
 		<img src = "imgs/falling.jpg" alt="Kids falling of rock" width="25"/>
-		<img src = "imgs/jewel_cave.jpg" alt="Cave tour" width="1000"/>
+		<img src = "imgs/jewel_cave.JPG" alt="Cave tour" width="1000"/>
 	</main>
 	Colleen van Lent &copy; 2020
 </body>
