--- a/personal.html
+++ b/personal.html
@@ -30,7 +30,9 @@
 		<img src = "imgs/falling.jpg" alt="Kids falling of rock" width="25"/>
 		<img src = "imgs/jewel_cave.JPG" alt="Cave tour" width="1000"/>
 	</main>
-	Colleen van Lent &copy; 2020
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 </body>
 </html>
 
